# starling

include/: aligned_file_reader.h  iouring_file_reader.h  linux_aligned_file_reader.h  pq_flash_index.h
scripts/: config_dataset.sh  run_benchmark.sh
src/: CMakeLists.txt  iouring_file_reader.cpp  linux_aligned_file_reader.cpp  page_search.cpp  pq_flash_index.cpp
tests/: CMakeLists.txt  com_gt.sh
tests/utils/: CMakeLists.txt
